--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "pandas>=2.3.3",
     "pyarrow",
     "httpx",
+    "plotly>=6.5.0",
+    "kaleido>=1.2.0",
+    "nbformat>=5.10.4",
 ]
 
 [build-system]
